--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "react": "^16.4.2",
+    "react-date-picker": "^6.12.0",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4",
     "reactstrap": "^6.4.0"
